# LoadBalancer

./: .gitignore  README.md
LoadBalancerRust/: Cargo.toml
LoadBalancerRust/src/: aiattempt.rs  main.rs  myattempt.rs
LoadBalancerWeb/: README.md  angular.json  package.json
LoadBalancerWeb/src/: index.html
LoadBalancerWeb/src/app/: app.component.spec.ts  app.component.ts  app.config.ts
serve/: Cargo.toml
serve/src/: main.rs
