[package]
name = "KeyDownRemap"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
queues = "1.1"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4.22"
env_logger = "0.11.5"
chrono = "0.4.38"
